# imodmodel

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  sitemap.xml
.github/workflows/: build-and-deploy-docs.yml  test_and_deploy.yml
docs/: index.md  object_api.md  slicer_angles.md  z_coordinate_system_note.md
docs/examples/: export_mesh.ipynb  read_mesh.ipynb  smiley.ipynb
examples/export_mesh/: index.html
examples/read_mesh/: index.html
examples/smiley/: index.html
imodmodel/: __init__.py  data_structures.py  dataframe.py  functional.py  functions.py  models.py  parser.py  parsers.py  specification.py  specifications.py  utils.py
object_api/: index.html
search/: search_index.json
slicer_angles/: index.html
src/imodmodel/: __init__.py  binary_specification.py  dataframe.py  functions.py  mesh.py  models.py  parsers.py  utils.py  writers.py
tests/: conftest.py  test_functional_api.py  test_functions.py  test_imodmodel.py  test_model_api.py  test_parsers.py
tests/test_data/: meshed_contour_example.mod  meshed_curvature_example.mod  multiple_objects_example.mod  point_sizes_example.mod  points.mod  points.txt  slan_example.mod  slicer_angle_example.mod  two_contour_example.mod
z_coordinate_system_note/: index.html
